validating all node types

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -3,12 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import typing as t\n",
+    "import static_typing as st\n",
+    "\n",
     "code = '''\n",
+    "\n",
+    "import typing as t\n",
+    "\n",
+    "spam = ['spam', 'spam', 'spam']  # type: t.List[str]\n",
     "\n",
     "class MyClass:\n",
     "    def __init__(self):\n",
@@ -20,7 +25,9 @@
     "    return temp\n",
     "\n",
     "\n",
-    "'''"
+    "'''\n",
+    "\n",
+    "module = st.parse(code)"
    ]
   },
   {
@@ -31,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "{'MyClass': <StaticallyTypedClassDefClass@140596050246064>}"
+       "{'spam': OrderedSet([typing.List[str]])}"
       ]
      },
      "execution_count": 2,
@@ -40,9 +47,7 @@
     }
    ],
    "source": [
-    "import static_typing as st\n",
-    "module = st.parse(code)\n",
-    "module._classes"
+    "module._module_vars"
    ]
   },
   {
@@ -53,10 +58,30 @@
     {
      "data": {
       "text/plain": [
-       "{'a': OrderedSet([<class 'int'>]), 'b': OrderedSet([<class 'float'>])}"
+       "{'MyClass': <StaticallyTypedClassDefClass@4593700256>}"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "module._classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': OrderedSet([<class 'int'>]), 'b': OrderedSet([<class 'float'>])}"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'__init__': <StaticallyTypedFunctionDefClass@140596050246008>}"
+       "{'__init__': <StaticallyTypedFunctionDefClass@4593700424>}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +122,7 @@
        "<FunctionKind.Constructor: 7>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{<_ast3.Attribute at 0x7fdf11a1b320>: OrderedSet([<class 'int'>]),\n",
-       " <_ast3.Attribute at 0x7fdf11a1b400>: OrderedSet([<class 'float'>])}"
+       "{<_ast3.Attribute at 0x111ce4e80>: OrderedSet([<class 'int'>]),\n",
+       " <_ast3.Attribute at 0x111ce4f60>: OrderedSet([<class 'float'>])}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,16 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'add_one': <StaticallyTypedFunctionDefClass@140596050244160>}"
+       "{'add_one': <StaticallyTypedFunctionDefClass@4594087528>}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +184,7 @@
        "{'n': OrderedSet([<class 'int'>])}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +205,7 @@
        "OrderedSet([<class 'int'>])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +225,7 @@
        "<FunctionKind.Function: 1>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +245,7 @@
        "{'temp': OrderedSet([<class 'int'>])}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
