extended examples notebook

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `static-typing` examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Static type information in AST"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,7 +37,6 @@
     "def add_one(n: int) -> int:\n",
     "    temp = n + 1  # type: int\n",
     "    return temp\n",
-    "\n",
     "\n",
     "'''\n",
     "\n",
@@ -58,7 +71,7 @@
     {
      "data": {
       "text/plain": [
-       "{'MyClass': <StaticallyTypedClassDefClass@4593700256>}"
+       "{'MyClass': <StaticallyTypedClassDefClass@4463431408>}"
       ]
      },
      "execution_count": 3,
@@ -99,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "{'__init__': <StaticallyTypedFunctionDefClass@4593700424>}"
+       "{'__init__': <StaticallyTypedFunctionDefClass@4463431576>}"
       ]
      },
      "execution_count": 5,
@@ -140,8 +153,8 @@
     {
      "data": {
       "text/plain": [
-       "{<_ast3.Attribute at 0x111ce4e80>: OrderedSet([<class 'int'>]),\n",
-       " <_ast3.Attribute at 0x111ce4f60>: OrderedSet([<class 'float'>])}"
+       "{<_ast3.Attribute at 0x10a0a8fd0>: OrderedSet([<class 'int'>]),\n",
+       " <_ast3.Attribute at 0x10a0ba0f0>: OrderedSet([<class 'float'>])}"
       ]
      },
      "execution_count": 7,
@@ -161,7 +174,7 @@
     {
      "data": {
       "text/plain": [
-       "{'add_one': <StaticallyTypedFunctionDefClass@4594087528>}"
+       "{'add_one': <StaticallyTypedFunctionDefClass@4463503288>}"
       ]
      },
      "execution_count": 8,
@@ -252,6 +265,187 @@
    ],
    "source": [
     "function._local_vars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AST validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ast\n",
+    "import static_typing as st\n",
+    "\n",
+    "validator = st.ast_manipulation.AstValidator[ast]()\n",
+    "\n",
+    "tree = ast.parse(code).body[3]\n",
+    "\n",
+    "validator.visit(tree)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's make the AST invalid by adding something unexpected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree.body.append(ast.Slice(ast.Num(-10), ast.Num(10), ast.Num(2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tree is invalid\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    validator.visit(tree)\n",
+    "except AssertionError:\n",
+    "    print('tree is invalid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can still unparse that AST..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "def add_one(n: int) -> int:\n",
+      "    temp = (n + 1)\n",
+      "    return temp-10:10:2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import astunparse\n",
+    "\n",
+    "print(astunparse.unparse(tree))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But the resulting code is invalid because unparser assumes 100% valid AST!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AST transcribing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<_ast3.FunctionDef at 0x10a121438>, <_ast3.arguments at 0x10a1300b8>)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "import typed_ast.ast3\n",
+    "import static_typing as st\n",
+    "\n",
+    "transcriber = st.ast_manipulation.AstTranscriber[typed_ast.ast3, ast]()\n",
+    "\n",
+    "typed_tree = typed_ast.ast3.parse(code).body[3]\n",
+    "\n",
+    "typed_tree, typed_tree.args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<_ast.FunctionDef at 0x10a121048>, <_ast.arguments at 0x10a1211d0>)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree = transcriber.visit(typed_tree)\n",
+    "\n",
+    "tree, tree.args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"arguments(args=[arg(arg='n', annotation=Name(id='int', ctx=Load()))], vararg=None, kwonlyargs=[], kw_defaults=[], kwarg=None, defaults=[])\""
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ast.dump(tree.args)"
    ]
   }
  ],
